exports[`CardFields should not render if type is ach 1`] = `null`;

exports[`CardFields should render with props 1`] = `
<div>
  <div
    className="input input--active"
    data-spec="input-wrapper"
    style={Object {}}>
    <label
      htmlFor="cardNumber"
      style={Object {}}>
      Card Number
    </label>
    <input
      className={undefined}
      data-spec="input"
      defaultValue="4111-1111-1111-1111"
      disabled={undefined}
      id="cardNumber"
      maxLength=""
      name="billing-cc-number"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Card Number"
      style={Object {}}
      type="tel" />
    <div
      className="locked locked-right soft-double-right locked-top"
      style={
        Object {
          "top": "-3px",
        }
      }>
      <div
        className="background--fill display-inline-block bXaWiD"
        height="21px"
        width="30px" />
    </div>
  </div>
  <div
    className="grid">
    <div
      className="grid__item one-half">
      <div
        className="input input--active"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="expiration"
          style={Object {}}>
          Exp (MM/YY)
        </label>
        <input
          className={undefined}
          data-spec="input"
          defaultValue="11/22"
          disabled={undefined}
          id="expiration"
          maxLength=""
          name="billing-cc-exp"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Exp (MM/YY)"
          style={Object {}}
          type="tel" />
      </div>
    </div>
    <div
      className="grid__item one-half">
      <div
        className="input input--active"
        data-spec="input-wrapper"
        style={Object {}}>
        <label
          htmlFor="ccv"
          style={Object {}}>
          CCV
        </label>
        <input
          className={undefined}
          data-spec="input"
          defaultValue="111"
          disabled={undefined}
          id="ccv"
          maxLength=""
          name="billing-cvv"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="CCV"
          style={Object {}}
          type="tel" />
      </div>
    </div>
  </div>
</div>
`;

exports[`RenderIcon should not render if ach but no accountNumber 1`] = `null`;

exports[`RenderIcon should not render if card by no cardNumber 1`] = `null`;

exports[`RenderIcon should not render if no accountNumber or cardNumber 1`] = `null`;

exports[`RenderIcon should not render if no returned card type 1`] = `null`;

exports[`RenderIcon should render if ach and accountNumber 1`] = `
<div
  className="background--fill display-inline-block kpeakM"
  height="21px"
  width="30px" />
`;

exports[`RenderIcon should render if card and cardNumber and cardType returns 1`] = `
<div
  className="background--fill display-inline-block bXaWiD"
  height="21px"
  width="30px" />
`;
